// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenseSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     total 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render expenseSummary with 1mulitiple expense 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     total 
    $0.00
  </h1>
</div>
`;
